[metadata]
name = dynprogstorage
version = 0.1.9
description =
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
author = Robin Girard
author_email = robin.girard@mines-paristech.fr
url = https://github.com/robingirard/dynprogstorage
download_urls = https://pypi.org/project/dynprogstorage
project_urls =
	Code = https://github.com/robingirard/dynprogstorage
classifiers =
	Development Status :: 1 - Planning
	License :: OSI Approved :: MIT License
	Intended Audience :: Education
	Intended Audience :: Science/Research
	Topic :: Scientific/Engineering
	Topic :: Scientific/Engineering :: Mathematics
	Natural Language :: English
	Operating System :: OS Independent
	Programming Language :: C
	Programming Language :: Cython
	Programming Language :: Python
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: Implementation :: CPython

[options]
zip_safe = False
python_requires = >=3.8
package_dir = = .
packages = find:

[options.packages.find]
where = .

[options.package_data]
* = *.pxd, *.h
cypack = data/*

[egg_info]
tag_build =
tag_date = 0